--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.spring4all</groupId>
+            <artifactId>swagger-spring-boot-starter</artifactId>
+            <version>1.9.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>it.sauronsoftware</groupId>
+            <artifactId>jave</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 
 </project>
